<resources>
    <string name="app_name">DrawerSample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="dresser_6_image">6 Drawer Dresser</string>
    <string name="pick_your_clothes">Pick Your Clothes</string>
    <string name="underwear_amp_socks"><![CDATA[Underwear & Socks]]></string>
    <string name="t_shirts">T-Shirts</string>
    <string name="long_sleeve_shirts">Long-Sleeve Shirts</string>
    <string name="shorts">Shorts</string>
    <string name="pants">Pants</string>
    <string name="sweatshirts_amp_pants"><![CDATA[Sweatshirts & Pants]]></string>
    <string name="comfies_toast">Put On Your Comfies</string>
    <string name="pants_toast">Out On Your Pants</string>
    <string name="shorts_toast">Put On Your Shorts</string>
    <string name="lsshirt_toast">Put On Your Long-Sleeve Shirt</string>
    <string name="tshirt_toast">Put On Your T-Shirt</string>
    <string name="undersocks_toast"><![CDATA[Put On Your Underwear & Socks]]></string>
</resources>
